--- a/back-end/package.json
+++ b/back-end/package.json
@@ -7,6 +7,7 @@
         "bcrypt": "5.0.1",
         "cookie-parser": "1.4.5",
         "express": "4.17.1",
+        "express-validator": "^6.10.0",
         "jsonwebtoken": "8.5.1",
         "mongoose": "5.11.15",
         "nodemon": "2.0.7"
